<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_article_limit_default"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:key="@string/settings_article_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_article_limit_label" />
    <ListPreference
        android:defaultValue="@string/settings_section_filter_default"
        android:entries="@array/settings_section_filter_labels"
        android:entryValues="@array/settings_section_filter_values"
        android:key="@string/settings_section_filter_key"
        android:title="@string/settings_section_filter_label" />

</PreferenceScreen>